# rh_ros

./: .gitignore  .gitmodules  APM_SITL.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README.md~  localConfig.js  package.xml  setup.py  visionTesting.html
action/: PathFinder.action  SolvePathProblem.action
camera_driver/: CMakeLists.txt  README.md  package.xml
camera_driver/calibrations/: blob_detector.yaml  chameleon3.yaml  d5100.yaml  e2500.yaml  gopro.yaml  gopro4.yaml  solo4.yaml  solo4zoom.yaml  webcam.yaml
camera_driver/launch/: camera_standalone.launch  e2500.launch  export.launch  filecam.launch  gopro.launch  gopro4.launch  hitl_board.launch  px4_config.yaml  raspi.launch  tegra.launch  webcam.launch  webcam_blob.launch
camera_driver/metadata/: chameleon3.yaml  solo4.yaml  solo4zoom.yaml
camera_driver/scripts/: README.md  aruco_detector.py  blob_configrator.py  blob_detector.py  camera_pump.py  camera_standalone.py  chess_detector.py  e2500.py  e2500_service_client.py  filecam.py  gopro.py  gopro4.py  gopro_service_client.py  image_to_target.py  metadata.py  nikon_d5100.py  nikon_d5100.yaml  nikon_d5100_service_client.py  ost.txt  s100.py  s100_service_client.py  set_camera_info.py  webcam.py
camera_driver/src/: camera_driver_node.cpp  camera_image_node.cpp  camera_v4l2_node.cpp  camera_v4l2_testing.cpp  nikon_d5100.cpp  people_detector.cpp  to_stream.cpp
camera_driver/srv/: SetBlobInfo.srv
camera_driver/test/: test_aruco.launch  test_aruco.py
css/: main.css
depth_vision/: CMakeLists.txt  package.xml
findPath/: findpathEditor.py  testDynamicPathFinder.py  testStaticPathFinder.py
js/: leafletarc.js  main.js  missionDefinition.js
msg/: Arc.msg  Debug.msg  DynamicNoFlyZone.msg  FlightControllerSolution.msg  Input.msg  NoFlyZone.msg  Params.msg  PathDebug.msg  PathInput.msg  PathSegment.msg  PathSolution.msg  Road.msg  Scenario.msg  SolutionWaypoint.msg  Vehicle.msg
obc_gazebo/: CMakeLists.txt  README.md  package.xml  setup.sh
obc_pilot/: CMakeLists.txt  package.xml
obc_solo/: CMakeLists.txt  package.xml
pathFinding/: benchmark.py  constants.py  genScenario.py  localPathFinder.py  pathFinderSimulator.py  pathfinderguinode.py  pathfindernode.py  pathfinderserver.py  scenarioEditor.py  testDynamicPathFinder.py  (+4 more)
rh_autonomy/: package.xml  setup.py
rh_autonomy/launch/: rh.launch
rh_autonomy/scripts/: load_kmz.py  load_mission.py  load_obj.py  load_qgc.py  start_mission.py
rh_autonomy/src/rh_autonomy/: aggregator.py  constants.py  controller.py  flight.py  mission.py  search_pattern.py  state.py  util.py
rh_ground_control/: CMakeLists.txt  README.md  package.xml  visionTesting.html
rh_ground_control/js/: js-yaml.js
rh_ground_control/launch/: start.launch
rh_ground_control/scripts/: start.sh
rh_ground_control/web/: localConfig.js
rh_ground_control/web/js/: missionDefinition.js
rh_ground_control/yml/: boundaryPoints.txt
rh_msgs/: CMakeLists.txt  package.xml
rh_msgs/msg/: CameraMetadata.msg  GPSCoordList.msg  Mission.msg  PointList.msg  State.msg  VehicleState.msg
rh_msgs/srv/: FlyTo.srv  FlyWaypoints.srv  GenerateSearchPattern.srv  GetCameraMetadata.srv  GetState.srv  SetMission.srv  SetNoFlyZones.srv
rh_pathfinding/: CMakeLists.txt  package.xml  setup.py
rh_pathfinding/msg/: Arc.msg  GPSCoord.msg  GPSVelocity.msg  NoFlyZone.msg  Params.msg  PathInput.msg  Road.msg
rh_pathfinding/pathFinding/: constants.py  pathfinderguinode.py
rh_pathfinding/pathFinding/C/: geometry.c
rh_pathfinding/pathFinding/engine/: pathFinder.py
rh_pathfinding/pathFinding/engine/geometry/obstacle/: obstacleCourse.py
rh_pathfinding/pathFinding/engine/geometry/obstacle/arcFinder/: arcCriticalPoint.py  vertexArcTarget.py
rh_pathfinding/pathFinding/engine/geometry/obstacle/intersectionDetector/: circularObstacle.py
rh_pathfinding/pathFinding/engine/interface/gpsTransform/: gpsTransform.py
rh_pathfinding/pathFinding/engine/vertex/: gridVertexQueue.py
rh_pathfinding/pathFinding/gui/: __init__.py  draw.py
rh_pathfinding/pathFinding/gui/editor/: __init__.py
rh_pathfinding/pathFinding/gui/editor/nfzEdit/: __init__.py
rh_pathfinding/pathFinding/gui/pathFinder/: pathFinderInterface.py
rh_pathfinding/pathFinding/gui/simulator/: pathFindSimulatorViewer.py
rh_pathfinding/pathFinding/ros/: rosConstants.py
rh_pathfinding/scenarios/: dynamic1.json  dynamic2.json  generated.json  lowSpeed.json  unnecessary_loop_simple.json  waypoints.json  waypoints_obs.json
rh_pathfinding/src/rh_pathfinding/: pathfinderguinode.py  scenarioEditor.py
rh_pathfinding/src/rh_pathfinding/C/: build.py
rh_pathfinding/src/rh_pathfinding/engine/geometry/: __init__.py
rh_pathfinding/src/rh_pathfinding/engine/geometry/obstacle/arcFinder/: circularArcTarget.py
rh_pathfinding/src/rh_pathfinding/engine/geometry/obstacle/intersectionDetector/: __init__.py
rh_pathfinding/src/rh_pathfinding/engine/geometry/obstacle/lineFinder/: lineSegmentFinder.py
rh_pathfinding/src/rh_pathfinding/engine/interface/: generator.py  outputPath.py  vehicle.py
rh_pathfinding/src/rh_pathfinding/engine/interface/gpsTransform/: gpsTransform.py
rh_pathfinding/src/rh_pathfinding/engine/vertex/: __init__.py
rh_pathfinding/src/rh_pathfinding/engine/vertex/uniqueVertexQueue/: uniqueVertexQueue.py
rh_pathfinding/src/rh_pathfinding/gui/editor/: scenarioEditor.py  wayPointEditor.py
rh_pathfinding/src/rh_pathfinding/gui/editor/nfzEdit/: dnfzBuilder.py  nfzBuilder.py  nfzEditor.py  nfzPointMover.py  nfzVelocityChanger.py
rh_pathfinding/src/rh_pathfinding/gui/pathFinder/: localPathFinderInterface.py
rh_pathfinding/src/rh_pathfinding/ros/: messageConverter.py  rosPathFinderInterface.py  rosPathFinderServer.py
rh_pathfinding/src/rh_pathfinding/utils/: minheap.py
rh_pathfinding/srv/: StepPathProblem.srv  SubmitPathProblem.srv
rh_vision/: CMakeLists.txt  README.md  package.xml  setup.py
rh_vision/src/: canny_edges.cpp  threshold.cpp
rh_vision/src/rh_vision/: aruco_detector.py  image_to_target.py
rh_vision/test/: test_aruco.launch  test_aruco.py
(+423 files in other folders)
