<?xml version="1.0"?>
<package format="2">
  <name>rh_pathfinding</name>
  <version>0.0.1</version>
  <description>2d path finder for GPS-based navigation</description>
  <maintainer email="shp@noreply.com">shp</maintainer>
  <author email="shp@noreply.com">shp</author>
  <license>MIT</license>

  <url type="website">http://rhinohawk.com</url>
  <url type="repository">https://github.com/RhinohawkUAV/rh_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>
  </export>
</package>
